adds full pages

--- a/index.html
+++ b/index.html
@@ -11,8 +11,35 @@
     <title>Shoes</title>
 </head>
 <body>
-    <section class="full-page">
-        Test
-    </section>
+    <nav>
+        
+    </nav>
+    <main>
+
+        <section class="full-page">
+            <div class="full-page" id="page-red">
+                <div class="page-red-img shoes-basse">
+                    <div class="page-text text text-yellow">IL NOSTRO MODELLO<br>DI PUNTA</div>
+                </div>
+            </div>
+        </section>
+
+        <section class="full-page">
+            <div class="full-page" id="page-green">
+                <div class="page-red-img shoes-medie">
+                    <div class="page-text text text-yellow">IL NOSTRO MODELLO<br>DI PUNTA</div>
+                </div>
+            </div>
+        </section>
+
+        <section class="full-page">
+            <div class="full-page" id="page-yellow">
+                <div class="page-red-img shoes-alte">
+                    <div class="page-text text text-green">IL NOSTRO MODELLO<br>DI PUNTA</div>
+                </div>
+            </div>
+        </section>
+
+    </main>
 </body>
 </html>
